# copilot-linux-gtk

./: .gitignore  Justfile  README.md  io.github.ieshaan.CopilotGTK.json  meson.build  pyproject.toml
.github/: worklog-template.md
.github/workflows/: ci.yml  ui-tests.yml
build-aux/: io.github.ieshaan.CopilotGTK.Devel.json
data/: io.github.ieshaan.CopilotGTK.desktop.in  io.github.ieshaan.CopilotGTK.gschema.xml  io.github.ieshaan.CopilotGTK.metainfo.xml.in  meson.build
data/icons/: meson.build
plan/: feature-copilot-gtk-app-1.md
po/: POTFILES.in
src/: copilot-gtk.in  meson.build
src/copilot_gtk/: main.py  style.css  window.py
src/copilot_gtk/backend/: __init__.py  async_bridge.py  auth_manager.py  conversation.py  conversation_store.py  copilot_service.py  message.py  mock_copilot_service.py
src/copilot_gtk/widgets/: __init__.py  auth_dialog.py  chat_input.py  chat_view.py  code_block.py  conversation_list.py  conversation_row.py  markdown_renderer.py  message_bubble.py  preferences_dialog.py  shortcuts_window.py
tests/: test_accessibility.py  test_auth_dialog.py  test_auth_manager.py  test_chat_input.py  test_chat_view.py  test_conversation.py  test_conversation_list.py  test_conversation_row.py  test_conversation_store.py  test_copilot_service.py  test_event_flow.py  test_markdown_renderer.py  test_message.py  test_message_bubble.py  test_mock_copilot_service.py  test_preferences_dialog.py  test_shortcuts_window.py  test_window.py
tests/ui/: __init__.py  conftest.py  test_accessibility.py  test_adaptive_layout.py  test_app_launch.py  test_auth_dialog.py  test_conversation_sidebar.py  test_dark_mode.py  test_error_handling.py  test_keyboard_shortcuts.py  test_markdown_rendering.py  test_new_conversation.py  test_preferences_dialog.py  test_send_message.py  test_streaming_display.py
tests/ui/fixtures/: mock_responses.json
