scalable_icondir = get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
symbolic_icondir = get_option('datadir') / 'icons' / 'hicolor' / 'symbolic' / 'apps'

install_data(
  'hicolor' / 'scalable' / 'apps' / 'io.github.ieshaan.CopilotGTK.svg',
  install_dir: scalable_icondir,
)

install_data(
  'hicolor' / 'symbolic' / 'apps' / 'io.github.ieshaan.CopilotGTK-symbolic.svg',
  install_dir: symbolic_icondir,
)
